# graphed-exec-local-mvp

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/M31/: attempts.md
.graphed/M38/: attempts.md
.graphed/M7/: attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
scripts/: advance.py
src/graphed_exec_local/: __init__.py  _peer.py  _pinned_pool.py  _reduce.py  _transport.py  executors.py  resources.py
tests/frozen/m10/: README.md  m10_helpers.py  test_pooled_combines.py
tests/frozen/m31/: functions_probe.py  shipping_probe.py  test_ship_process_once.py
tests/frozen/m34/: test_bounded_cache_and_dedup.py
tests/frozen/m37/: probe.py  test_capstone_dashboard.py  test_emit.py  test_inprocess_paths.py
tests/frozen/m38/: test_inprocess_peer.py  test_lazy_reduce.py  test_peer_executor.py  test_peer_reduce.py  test_peer_robustness.py  test_pinned_transport.py  test_pooled_transport.py  test_steal.py  test_transport.py
tests/frozen/m7/: analyses.py  test_adaptive.py  test_concurrency.py  test_executors.py  test_hep_endtoend.py  test_open_once.py  test_reduce.py  test_remote_error.py  test_straggler.py
